--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova-ios": "~4.5.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
@@ -58,7 +59,8 @@
       "cordova-plugin-browsertab": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
